--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
   "dependencies": {
     "firebase": "^9.6.1",
     "gatsby": "^4.4.0",
-    "gatsby-plugin-firebase-v9.0": "^1.0.2",
     "gatsby-plugin-gatsby-cloud": "^4.4.0",
     "gatsby-plugin-image": "^2.4.0",
     "gatsby-plugin-manifest": "^4.4.0",
@@ -19,7 +18,9 @@
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
-    "react-helmet": "^6.1.0"
+    "react-helmet": "^6.1.0",
+    "react-hot-toast": "^2.1.1",
+    "react-icons": "^4.3.1"
   },
   "devDependencies": {
     "prettier": "^2.4.1"
